--- a/.github/workflows/golangci-lint-pr.yml
+++ b/.github/workflows/golangci-lint-pr.yml
@@ -1,7 +1,7 @@
-name: golangci-lint
+name: golangci-lint-pr
 
 on:
-  push:
+  pull_request:
     branches: main
     paths:
       - 'golangci-lint/*'
@@ -23,19 +23,8 @@ jobs:
       - name: docker build
         run: |
           docker build -t ${{ steps.prepare.outputs.repo }}:${{ steps.prepare.outputs.commit }} golangci-lint/
-      - name: docker login
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ secrets.RELEASE_GHCR_USER_NAME }}
-          password: ${{ secrets.RELEASE_GHCR_USER_TOKEN }}
-      - name: docker tag and push
+      - name: check image
         run: |
           REF="${{ steps.prepare.outputs.repo }}:${{ steps.prepare.outputs.commit }}"
-          TAG="$(docker run --rm --entrypoint sh ${REF} -c 'golangci-lint --version | awk "{print \$4}"')"
-          docker tag ${REF} ${{ steps.prepare.outputs.repo }}:${TAG}
-          docker push ${{ steps.prepare.outputs.repo }}:${TAG}
-      - name: clear
-        if: always()
-        run: |
-          rm -f ${HOME}/.docker/config.json
+          docker run --rm --entrypoint sh ${REF} -c 'golangci-lint --version | awk "{print \$4}"'
+
