try pushing in fork
Signed-off-by: Josh Dolitsky <josh@dolit.ski>

--- a/.github/workflows/pandoc.yml
+++ b/.github/workflows/pandoc.yml
@@ -2,7 +2,7 @@ name: pandoc
 
 on:
   push:
-    branches: main
+    branches: use-crane-update-test
     paths:
       - 'pandoc/*'
       - '.github/workflows/pandoc.yml'
