--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -2,7 +2,7 @@ name: golangci-lint
 
 on:
   push:
-    branches: main
+    branches: use-crane-update-test
     paths:
       - 'golangci-lint/*'
       - '.github/workflows/golangci-lint.yml'
