--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -31,9 +31,19 @@ jobs:
           password: ${{ secrets.RELEASE_GHCR_USER_TOKEN }}
       - name: crane copy
         run: |
+          # Ensure crane installed
+          crane help > /dev/null || ( \
+            curl -LO "${CRANE_RELEASE_URL}" && CRANE_RELEASE_FILENAME="${CRANE_RELEASE_URL##*/}" && \
+            shasum -a 256 "${CRANE_RELEASE_FILENAME}" | grep "^${CRANE_RELEASE_SHA256}  " && \
+            mkdir testbin/ && cat "${CRANE_RELEASE_FILENAME} | tar x -C ./tesbin crane && \
+            export PATH="${PATH}:${PWD}/testbin" && crane help > /dev/null )
+
           REF="${{ steps.prepare.outputs.repo }}:${{ steps.prepare.outputs.commit }}"
           TAG="$(docker run --rm --entrypoint sh ${REF} -c 'golangci-lint --version | awk "{print \$4}"')"
           crane copy ${REF} ${{ steps.prepare.outputs.repo }}:${TAG}
+        env:
+          CRANE_RELEASE_URL: https://github.com/google/go-containerregistry/releases/download/v0.6.0/go-containerregistry_Linux_x86_64.tar.gz
+          CRANE_RELEASE_SHA256: b71c7ca16abff07787516efbe0c06c129d273f34490d6a85f815cec980fffe85
       - name: clear
         if: always()
         run: |
