install crane if not present (fix quote)
Signed-off-by: Josh Dolitsky <josh@dolit.ski>

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -35,7 +35,7 @@ jobs:
           crane help > /dev/null || ( \
             curl -LO "${CRANE_RELEASE_URL}" && CRANE_RELEASE_FILENAME="${CRANE_RELEASE_URL##*/}" && \
             shasum -a 256 "${CRANE_RELEASE_FILENAME}" | grep "^${CRANE_RELEASE_SHA256}  " && \
-            mkdir testbin/ && cat "${CRANE_RELEASE_FILENAME} | tar x -C ./tesbin crane && \
+            mkdir testbin/ && cat "${CRANE_RELEASE_FILENAME}" | tar x -C ./tesbin crane && \
             export PATH="${PATH}:${PWD}/testbin" && crane help > /dev/null )
 
           REF="${{ steps.prepare.outputs.repo }}:${{ steps.prepare.outputs.commit }}"
