--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -2,7 +2,7 @@ name: golangci-lint
 
 on:
   push:
-    branches: main
+    branches: use-crane-update-test-2
     paths:
       - 'golangci-lint/*'
       - '.github/workflows/golangci-lint.yml'
@@ -13,34 +13,29 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: prepare
-        id: prepare
-        run: |
-          REPO="ghcr.io/${{ github.repository_owner }}/golangci-lint"
-          COMMIT="$(git rev-parse --short HEAD)"
-          echo ::set-output name=repo::${REPO}
-          echo ::set-output name=commit::${COMMIT}
-      - name: docker build
-        run: |
-          docker build -t ${{ steps.prepare.outputs.repo }}:${{ steps.prepare.outputs.commit }} golangci-lint/
       - name: docker login
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ secrets.RELEASE_GHCR_USER_NAME }}
           password: ${{ secrets.RELEASE_GHCR_USER_TOKEN }}
-      - name: crane copy
+      - name: ensure crane
         run: |
-          # Ensure crane installed
           crane help &> /dev/null || ( echo "Installing crane ... " && \
             curl -sLO "${CRANE_RELEASE_URL}" && CRANE_RELEASE_FILENAME="${CRANE_RELEASE_URL##*/}" && \
             shasum -a 256 "${CRANE_RELEASE_FILENAME}" | grep -q "^${CRANE_RELEASE_SHA256}  " && \
             mkdir testbin/ && cat "${CRANE_RELEASE_FILENAME}" | tar xz -C /usr/local/bin crane && \
             crane help > /dev/null )
-
-          REF="${{ steps.prepare.outputs.repo }}:${{ steps.prepare.outputs.commit }}"
-          TAG="$(docker run --rm --entrypoint sh ${REF} -c 'golangci-lint --version | awk "{print \$4}"')"
-          crane copy ${REF} ${{ steps.prepare.outputs.repo }}:${TAG}
+        env:
+          CRANE_RELEASE_URL: https://github.com/google/go-containerregistry/releases/download/v0.6.0/go-containerregistry_Linux_x86_64.tar.gz
+          CRANE_RELEASE_SHA256: b71c7ca16abff07787516efbe0c06c129d273f34490d6a85f815cec980fffe85
+      - name: crane copy
+        run: |
+          crane copy "${ORIG_IMAGE_REPO}:${ORIG_IMAGE_TAG}" \
+            "ghcr.io/${{ github.repository_owner }}/golangci-lint:${ORIG_IMAGE_TAG}"
+        env:
+          ORIG_IMAGE_REPO: docker.io/golangci/golangci-lint
+          ORIG_IMAGE_TAG: v1.42.1
       - name: clear
         if: always()
         run: |
